<resources>
    <string name="app_name">kurs</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="loginPrompt">Логин</string>
    <string name="passwordPrompt">Пароль</string>
    <string name="rememberMe">Запомнить меня</string>
    <string name="enter">Зайти</string>
    <string name="newLoginPrompt">Новый логин</string>
    <string name="newPasswordPrompt">Новый пароль</string>
    <string name="applyChanges">Применить изменения</string>
    <string name="id">ID</string>
    <string name="personalCardNumber">Номер личной карточки</string>
    <string name="accessLevel">Доступ</string>
    <string name="delete">Удалить</string>
    <string name="add">Добавить</string>
    <string name="update">Обновить</string>
    <string name="byDefault">По умолчанию</string>
    <string name="addEmployee">Добавить сотрудника</string>
    <string name="editEmployeeInfo">Редактировать инфо</string>
    <string name="deleteEmployee">Удалить сотрудника</string>
    <string name="nameItem">Имя:</string>
    <string name="surnameItem">Фамилия:</string>
    <string name="postItem">Должность:</string>
    <string name="account">Аккаунт</string>
    <string name="employeeManager">Управление сотрудниками</string>
    <string name="staff">Сотрудники</string>
    <string name="accountEditor">Редактор аккаунтов</string>
    <string name="chart">Диаграмма</string>
    <string name="accountSection">Работа с аккаунтом</string>
    <string name="logout">Выход из аккаунта</string>
    <string name="employmentContractNumber">Номер трудового договора</string>
    <string name="personalDataConsent">Согласие на обработку персональных данных</string>
    <string name="vacationSchedule">График отпусков</string>
    <string name="employmentRecordNumber">Номер трудовой книжки</string>
    <string name="schedule">График работы</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="position">Должность</string>
    <string name="save">Сохранить</string>
    <string name="done">Готово</string>
    <string name="edit">Редактировать</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="confirmationMessage">Вы уверены, что хотите удалить запись?</string>
    <string name="deletionMessage">Удаление записи</string>
    <string name="welcomeMsg">Вас приветствует приложение \"Кадровик\"</string>
    <string name="description">Это приложение реализует часть функционала системы кадрового учёта. Оно позволяет сотрудникам, ведущим учёт кадров, удобно взаимодействовать с системой</string>
    <string name="authorText">Автор: Павловский Илья Дмитриевич. Группа: ИКБО-06-22</string>
    <string name="startApp">Начать работу</string>


</resources>