<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173"
        app:srcCompat="@drawable/foreground" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="278dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/welcomeMsg"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="276dp"
        android:layout_height="94dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/description"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/welcomeText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/welcomeText"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <TextView
        android:id="@+id/authorText"
        android:layout_width="276dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/authorText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/descriptionText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/descriptionText"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

    <Button
        android:id="@+id/start_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/grey"
        android:text="@string/startApp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/authorText"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/authorText"
        app:layout_constraintTop_toBottomOf="@+id/authorText" />
</androidx.constraintlayout.widget.ConstraintLayout>